--- a/appWarmaster/src/estilos/seleccionJuegos.css
+++ b/appWarmaster/src/estilos/seleccionJuegos.css
@@ -77,7 +77,7 @@
 
 /* Grid de Juegos */
 .juegos-grid {
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   gap: 25px;
 }
